<resources>
    <string name="app_name">HC24-Luuk-Crawford-Senior-Project</string>
    <string name="beginOrder">Begin Order</string>
    <string name="typeOfOrderOptions">Order Options</string>
    <string name="itemNameTest">Item Name Test</string>
    <string name="choiceOfSide">+ choice of side</string>
    <string name="mealswipe">Mealswipe</string>
    <string name="mealswipe3">Mealswipe + $3</string>
    <string name="itemName">tempItemName</string>
    <string name="selectSide">Side (select one)</string>
    <string name="fries">Hand Cut Fries</string>
    <string name="tots">Tater Tots</string>
    <string name="macNCheese">Mac-N-Cheese</string>
    <string name="lettuce">Lettuce</string>
    <string name="onion">Onion</string>
    <string name="pickle">Pickle</string>
    <string name="tomato">Tomato</string>
    <string name="americanCheese">Americn Cheese</string>
    <string name="back">Cancel and go back.</string>
    <string name="selectToppings">Toppings</string>
    <string name="submitConfirmOrder">Submit/Confirm Order</string>
    <string name="limeRice">Lime Rice</string>
    <string name="blackBeans">Black Beans</string>
    <string name="queso">Queso</string>
    <string name="chicken">Chicken</string>
    <string name="jalapenos">Jalapenos</string>
    <string name="sourCream">Sour Cream</string>
    <string name="salsa">Salsa</string>
    <string name="unknown">unknown</string>
    <string name="nothing" />
    <string name="collegeNameCaps">HANOVER COLLEGE</string>
    <string name="underground">Underground</string>
    <string name="lostImage">image of item</string>
    <string name="sides">Sides:</string>
    <string name="toppings">Toppings:</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="orderSubmitted">Order submitted</string>
    <string name="submitOrder">Submit Order</string>
    <string name="connectionFailed">Connection Failed</string>
    <string name="tryingToSubmit">Trying to submit order</string>
    <string name="menu_could_not_be_found">Menu could not be found. Please try again.</string>
    <string name="alreadyOrderedRecently">Sorry, you already ordered recently (min 25 sec).</string>
    <string name="refresh">Refresh</string>
    <string name="yourName">Your name:</string>
    <string name="sauces">Sauces:</string>
    <string name="glutenFree">Gluten Free:</string>
    <string name="loadingMenu">Loading Menu</string>

</resources>