<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/toppingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectToppings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppingsText"
        app:singleSelection="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="78dp">


        <com.google.android.material.chip.Chip
            android:id="@+id/chipLettuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/lettuce" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/tomato" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/onion" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipPickle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/pickle" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipAmericanCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/americanCheese" />

    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>