<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/sideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectSide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sideText"
        app:singleSelection="true">


        <com.google.android.material.chip.Chip
            android:id="@+id/chipFries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fries"
            app:checkedIconTint="#CC2B83" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tots" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMacNCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macNCheese" />
    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>