<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemSlotSize"
        android:cardElevation="5dp"
        android:cardCornerRadius="5dp"
        android:cardBackgroundColor="@color/white"
        >
        <ImageView

            android:layout_width="@dimen/itemSlotSize"
            android:layout_height="@dimen/itemSlotSize"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:src="@drawable/ic_launcher_background"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="155dp"
            android:paddingTop="10dp"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/itemNameTest"
            android:layout_gravity="center"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceOfSide"
            android:paddingLeft="155dp"
            android:paddingTop="37dp"
            android:textColor="@color/black"
            android:textSize="18dp"

            ></TextView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mealswipe"
            android:paddingLeft="110dp"
            android:paddingTop="64dp"
            android:textColor="@color/black"
            android:textSize="20dp"


            ></TextView>

    </androidx.cardview.widget.CardView>
</LinearLayout>