<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <TextView
                android:background="@color/hanoverWebRed"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:background="@color/hanoverWebRed"
                android:id="@+id/textView2"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingBottom="20dp"
                android:text="@string/typeOfOrderOptions"
                android:textAlignment="center"
                android:textSize="35sp"
                android:paddingVertical="13dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemSlotSize"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                >
                <ImageView

                    android:layout_width="@dimen/itemSlotSize"
                    android:layout_height="@dimen/itemSlotSize"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/ic_launcher_background"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="155dp"
                    android:paddingTop="10dp"
                    android:textSize="23sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/itemNameTest"
                    android:layout_gravity="center"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choiceOfSide"
                    android:paddingLeft="155dp"
                    android:paddingTop="37dp"
                    android:textColor="@color/black"
                    android:textSize="18dp"

                    ></TextView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mealswipe"
                    android:paddingLeft="110dp"
                    android:paddingTop="64dp"
                    android:textColor="@color/black"
                    android:textSize="20dp"


                    ></TextView>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemSlotSize"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                >
                <ImageView

                    android:layout_width="@dimen/itemSlotSize"
                    android:layout_height="@dimen/itemSlotSize"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:elevation="3dp"
                    android:src="@drawable/ic_launcher_background"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="155dp"
                    android:paddingTop="10dp"
                    android:textSize="23sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/itemNameTest"
                    android:layout_gravity="center"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choiceOfSide"
                    android:paddingLeft="155dp"
                    android:paddingTop="37dp"
                    android:textColor="@color/black"
                    android:textSize="18dp"

                    ></TextView>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mealswipe"
                    android:paddingLeft="110dp"
                    android:paddingTop="64dp"
                    android:textColor="@color/black"
                    android:textSize="20dp"


                    ></TextView>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>